RESOLVED FIXED199504
[iOS] Context Menu - Add to Reading List does nothing
https://bugs.webkit.org/show_bug.cgi?id=199504
Summary [iOS] Context Menu - Add to Reading List does nothing
Dean Jackson
Reported 2019-07-04 13:50:49 PDT
[iOS] Context Menu - Add to Reading List does nothing
Attachments
Patch (2.66 KB, patch)
2019-07-04 13:53 PDT, Dean Jackson
andersca: review+
Dean Jackson
Comment 1 2019-07-04 13:51:23 PDT
Dean Jackson
Comment 2 2019-07-04 13:53:26 PDT
Anders Carlsson
Comment 3 2019-07-04 16:37:19 PDT
Comment on attachment 373471 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=373471&action=review > Source/WebKit/UIProcess/API/Cocoa/_WKElementAction.mm:290 > + RELEASE_LOG(ContextMenu, "Executing action for type: %s", elementActionTypeToUIActionIdentifier([elementAction type]).UTF8String); Do you really need to log here?
Dean Jackson
Comment 4 2019-07-05 16:35:05 PDT
Dean Jackson
Comment 5 2019-07-05 16:42:55 PDT
Comment on attachment 373471 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=373471&action=review >> Source/WebKit/UIProcess/API/Cocoa/_WKElementAction.mm:290 >> + RELEASE_LOG(ContextMenu, "Executing action for type: %s", elementActionTypeToUIActionIdentifier([elementAction type]).UTF8String); > > Do you really need to log here? No. But it seems we're more happy to release log these days.
Note You need to log in before you can comment on or make changes to this bug.